<resources>
    <string name="app_name">tabsamples</string>

    <string name="submit">Submit</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">Last Date</string>
    <string name="reason">Reason</string>
    <string name="description">Description</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="expected_arrival_time">Expected Time to Arrive:</string>
    <string name="late_entry_info">Late entry info</string>

</resources>