<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attendanceLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/round_corner_bottom_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/start_date"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start_date"
                android:background="@drawable/edittxt_bg"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_start_arrow"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/end_date"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/last_date"
                android:background="@drawable/edittxt_bg"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_end_backarrow"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/reason"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reason_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:maxLength="100"
            android:background="@drawable/edittxt_bg"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:singleLine="false"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:theme="@style/datepicker"
            android:minLines="3" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttonbar"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="Leave Info"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg"
            android:layout_width="150dp"
            android:layout_height="30dp"/>

    </RelativeLayout>


</LinearLayout>