<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/round_corner_bottom_green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/attendanceLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/in_time"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/in_time"
                        android:background="@drawable/edittxt_bg"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_start_arrow"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/out_time"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/out_time"
                        android:background="@drawable/edittxt_bg"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_end_backarrow"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>
                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBtn"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_bg"
                android:layout_width="150dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>